# mtls-example

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
certs/: ca.crt  ca.key  ca.srl  client_1.crt  client_1.csr  client_1.key  client_2.crt  client_2.csr  client_2.key  openssl.ext  server.crt  server.csr  server.key
src/: client.rs  server.rs
