[package]
name = "mtls-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14", features = ["_tls-any"] }
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
log = "0.4.27"
env_logger = "0.11.8"
rustls-pki-types = "1.12.0"
x509-parser = "0.17.0"
tower = "0.5.2"

[build-dependencies]
tonic-prost-build = "*"

[[bin]]
name = "mtls-client"
path = "src/client.rs"

[[bin]]
name = "mtls-server"
path = "src/server.rs"
